policies/templates/external_ip.yaml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
apiVersion: templates.gatekeeper.sh/v1alpha1
kind: ConstraintTemplate
metadata:
  name: gcp-external-ip-access
spec:
  crd:
    spec:
      names:
        kind: GCPExternalIpAccessConstraint
        plural: gcpexternalipaccessconstraints
      validation:
        openAPIV3Schema:
          properties: {}
  targets:
    validation.gcp.forsetisecurity.org:
      rego: |
            #INLINE("validator/external_ip.rego")
             package templates.gcp.GCPExternalIpAccessConstraint
             
             import data.validator.gcp.lib as lib
             
             deny[{
             	"msg": message,
             	"details": metadata,
             }] {
             	# constraint := input.constraint
             	# lib.get_constraint_params(constraint, params)
             	asset := input.asset
             	asset.asset_type == "compute.googleapis.com/Instance"
             
             	instance := asset.resource.data
             	access_config := instance.networkInterfaces[_].accessConfigs
             
             	message := sprintf("%v is not allowed to have an external IP.", [asset.name])
             	metadata := {"access_config": access_config}
             }
             #ENDINLINE
